return real json objects on all REST calls, add the health service
